sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:17: error: not found: value BlancRouge
      echange(i,BlancRouge)
                ^